# gst_pre_record_loop

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  QUICK_REFERENCE.md  README.md  T013-DEBUGGING-NOTES.md  T013-GSTREAMER-PLUGIN-CACHE-FIX.md  conanfile.py
.ci/: run-tests.sh
.github/: copilot-instructions.md
.github/workflows/: build-container.yml  ci.yml  valgrind.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
docker/: Dockerfile
docs/: CHANGELOG.md
gstprerecordloop/: CMakeLists.txt
gstprerecordloop/inc/gstprerecordloop/: gstprerecordloop.h
gstprerecordloop/src/: gstprerecordloop.c
specs/000-prerecordloop-baseline/: COMPLETION_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/000-prerecordloop-baseline/contracts/: custom-events.md  properties.md
specs/002-remove-conan-and/: spec.md
specs/003-remove-conan-currently/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-remove-conan-currently/contracts/: CMakePresets.json.example
testapp/: CMakeLists.txt  Info.plist.in  README.md
testapp/src/: main.cc
tests/: CMakeLists.txt
tests/integration/: test_flush_sequence.c  test_oversize_gop.c  test_rearm_cycle.c
tests/memory/: gstreamer.supp  test_leaks.sh  test_leaks_valgrind.sh
tests/perf/: test_latency_prune.c
tests/unit/: test_concurrent_flush_ignore.c  test_flush_on_eos.c  test_flush_on_eos_policies.c  test_flush_seek_reset.c  test_flush_trigger_name.c  test_gap_events.c  test_max_time_property.c  test_no_refcount_critical.c  test_passthrough_event_queuing.c  test_placeholder.c  test_plugin_registration.c  test_pruning_two_gop_floor.c  test_queue_pruning.c  test_rearm_sequence.c  test_seek_passthrough.c  test_stats_counters.c  test_sticky_events.c  test_utils.c  test_utils.h
